--- a/src/components/input/Input.module.css
+++ b/src/components/input/Input.module.css
@@ -1,3 +1,15 @@
+/** START - HIDE NATIVE NUMBER INPUT BUTTONS  **/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+/** END - HIDE NATIVE NUMBER INPUT BUTTONS **/
+
 .input {
   border: 1px solid #ccc;
   padding: 0.5rem;
@@ -5,8 +17,5 @@
   border-radius: 4px;
 }
 
-/* Hide native arrows for number inputs */
 .numberInput {
-  -webkit-appearance: none;
-  -moz-appearance: textfield;
 }
