--- a/src/components/input/Input.module.css
+++ b/src/components/input/Input.module.css
@@ -18,6 +18,7 @@ input[type='number'] {
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
+  position: relative;
 }
 
 .input {
@@ -27,8 +28,7 @@ input[type='number'] {
   padding: 1rem;
   font-size: 1.4rem;
   border-radius: 0.8rem;
-  opacity: 0.6;
-  border: 2px solid #d78dff;
+  opacity: 1;
 
   &:focus {
     outline: none;
@@ -38,8 +38,28 @@ input[type='number'] {
 }
 
 .label {
-  color: #d78dff;
+  opacity: 0.7;
   font-weight: 800;
   font-size: 1.4rem;
   margin-left: 0.2rem;
+}
+
+.inputWrapper:focus-within .label {
+  color: #d78dff;
+}
+
+.inputWrapper .input.inputError {
+  border: 1px solid #ff6666;
+}
+
+.inputWrapper .label.labelError {
+  color: #ff6666;
+}
+
+.error {
+  position: absolute;
+  color: #ff6666;
+  font-size: 1.2rem;
+  top: 6rem;
+  left: 0.6rem;
 }
