--- a/src/components/dropdown/Dropdown.module.css
+++ b/src/components/dropdown/Dropdown.module.css
@@ -4,12 +4,27 @@
 
 .input {
   width: 100%;
-  padding: 0.5rem;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  background-color: #ffffff;
+  width: 30rem;
   box-sizing: border-box;
+  background-color: transparent;
+  padding: 1rem;
+  font-size: 1.4rem;
+  border: 2px solid #000;
+  border-radius: 0.8rem;
+  opacity: 1;
+
+  &:focus {
+    outline: none;
+    opacity: 1;
+    border: 2px solid #d78dff;
+  }
+}
+
+.label {
+  opacity: 0.7;
+  font-weight: 800;
+  font-size: 1.4rem;
+  margin-left: 0.2rem;
 }
 
 .select {
@@ -22,8 +37,8 @@
   color: #d78dff;
 }
 
-.dropdownWrapper .select.inputError {
-  border: 1px solid #ff6666;
+.dropdownWrapper .input.inputError {
+  border: 2px solid #ff6666;
 }
 
 .dropdownWrapper .label.labelError {
