--- a/src/form/Form.module.css
+++ b/src/form/Form.module.css
@@ -1,16 +1,27 @@
 .formContainer {
-  width: 100%;
   height: 100vh;
 }
 
 .form {
-  max-width: 52.4rem;
   width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .formTitle {
   color: #d78dff;
   font-size: 3.6rem;
+  margin: 0 0 1rem 0;
+  text-align: center;
+}
+
+.disclaimer {
+  color: #d78dff;
+  opacity: 0.4;
+  font-size: 1.6rem;
   margin: 1rem;
   text-align: center;
 }
@@ -19,12 +30,14 @@
   gap: 3rem;
   border: 2px solid #d78dff;
   border-radius: 0.8rem;
-  padding: 12rem 14rem;
+  padding: 2rem 6rem;
+  min-height: 39rem;
+  height: 100%;
+  min-width: 30rem;
+  width: 100%;
 }
 
 .formFields {
-  max-width: 24rem;
-  width: 100%;
   gap: 2rem;
 }
 
@@ -35,19 +48,23 @@
   justify-content: center;
   gap: 3rem;
   animation: fadeIn 0.4s ease-in;
+  max-width: 31rem;
+  width: 100%;
 }
 
 .mockResponseTitle {
   color: #d78dff;
   font-size: 2.4rem;
+  min-width: 34rem;
+  width: 100%;
   margin: 0;
   text-align: center;
-  min-width: 36rem;
-  width: 100%;
 }
 
 .mockContainer {
   gap: 2rem;
+  max-width: 30rem;
+  width: 100%;
 }
 
 .mockResponse {
@@ -62,6 +79,10 @@
   padding: 10px;
   font-family: 'Courier New', Courier, monospace;
   white-space: pre-wrap;
+}
+
+.titleWrapper {
+  align-items: flex-start;
 }
 
 @keyframes fadeIn {
